--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Monastery360 – Explore Sikkim’s Spiritual Heritage (No Libraries)</title>
+    <title>HeritageSphere – Explore Sikkim’s Spiritual Heritage</title>
     <link rel="stylesheet" href="sikkim.css">
 </head>
 <body>
@@ -113,9 +113,9 @@
                     <button class="btn filter-btn" onclick="filterSelection('architecture')">Architecture</button>
                 </div>
                 <div class="row">
-                    <div class="col-lg-3 col-md-4 col-sm-6 mb-4 filter-item mural"><div class="card" style="height:100%"><img src="https://images.unsplash.com/photo-1597512212202-a75d55b3574a?w=500" alt="Mural"><div class="card-body"><h6 class="card-title">Ancient Wall Mural</h6></div></div></div>
+                    <div class="col-lg-3 col-md-4 col-sm-6 mb-4 filter-item mural"><div class="card" style="height:100%"><img src="https://images.squarespace-cdn.com/content/v1/61cc66f9e8f1cb7928c32c66/8533e6d1-24f1-4226-a0a9-532d5ca23836/sikkim%2Bart%2B2.jpg" alt="Mural"><div class="card-body"><h6 class="card-title">Ancient Wall Mural</h6></div></div></div>
                     <div class="col-lg-3 col-md-4 col-sm-6 mb-4 filter-item document"><div class="card" style="height:100%"><img src="https://images.unsplash.com/photo-1521587760476-6c12a4b040da?w=500" alt="Document"><div class="card-body"><h6 class="card-title">Tibetan Manuscript</h6></div></div></div>
-                    <div class="col-lg-3 col-md-4 col-sm-6 mb-4 filter-item architecture"><div class="card" style="height:100%"><img src="https://images.unsplash.com/photo-1605333425373-c09a80770529?w=500" alt="Architecture"><div class="card-body"><h6 class="card-title">Monastery Entrance</h6></div></div></div>
+                    <div class="col-lg-3 col-md-4 col-sm-6 mb-4 filter-item architecture"><div class="card" style="height:100%"><img src="https://live.staticflickr.com/586/20162975503_85f8ddcb59_b.jpg" alt="Architecture"><div class="card-body"><h6 class="card-title">Monastery Entrance</h6></div></div></div>
                 </div>
             </div>
         </section>
@@ -141,14 +141,14 @@
         <section id="tourism-page" class="page">
             <div class="container">
                 <h2 class="text-center mb-5">Plan Your Spiritual Journey</h2>
-                <h2 class="mb-4">Suggested Itineraries</h2>
+                <h2 class="mb-4" style="color: rgb(13, 12, 5); position: relative; top: 20px;">Suggested Itineraries</h2>
                 <div class="row">
                     <div class="col-md-4 mb-4"><div class="card" style="height:100%"><div class="card-body"><h5 class="card-title">3-Day East Sikkim Tour</h5><p class="card-text">Covering Gangtok, Rumtek Monastery, and Tsomgo Lake.</p><a href="#" class="btn btn-primary">View Plan</a></div></div></div>
                     <div class="col-md-4 mb-4"><div class="card" style="height:100%"><div class="card-body"><h5 class="card-title">5-Day West Sikkim Heritage</h5><p class="card-text">Explore Pelling, Pemayangtse Monastery, and Yuksom.</p><a href="#" class="btn btn-primary">View Plan</a></div></div></div>
                 </div>
-                <h2 class="mb-4 mt-5" style="color:rgb(124, 136, 136) ;">Travel Information</h2>
-                <p style="font-size: medium;"><strong>By Air:</strong> The nearest airport is Pakyong (PYG). The major nearest airport is Bagdogra (IXB) in West Bengal.🚂</p>
-                <p><strong>By Rail:</strong> The nearest major railway station is New Jalpaiguri (NJP). You can hire taxis from NJP to Sikkim.✈️</p>
+                <h2 class="mb-4 mt-5" style="color:rgb(124, 136, 136);position: relative; top:-65px;"">Travel Information</h2>
+                <p style="font-size: medium;position: relative; top: -82px;"><strong>By Air:</strong> The nearest airport is Pakyong (PYG). The major nearest airport is Bagdogra (IXB) in West Bengal.🚂</p>
+                <p style="font-size: medium; position: relative; top: -78px;"><strong>By Rail:</strong> The nearest major railway station is New Jalpaiguri (NJP). You can hire taxis from NJP to Sikkim.✈️</p>
             </div>
         </section>
         
@@ -162,12 +162,12 @@
                 </div>
                 <h3 class="text-center mt-5 mb-4">Meet the Team</h3>
                 <div class="row text-center">
-                    <div class="col-lg-2 col-md-4 mb-4"><h5>Member 1</h5><p class="text-muted">Home & UI</p></div>
-                    <div class="col-lg-2 col-md-4 mb-4"><h5>Member 2</h5><p class="text-muted">Maps</p></div>
-                    <div class="col-lg-2 col-md-4 mb-4"><h5>Member 3</h5><p class="text-muted">Virtual Tour</p></div>
-                    <div class="col-lg-2 col-md-4 mb-4"><h5>Member 4</h5><p class="text-muted">Archive</p></div>
-                    <div class="col-lg-2 col-md-4 mb-4"><h5>Member 5</h5><p class="text-muted">Calendar</p></div>
-                    <div class="col-lg-2 col-md-4 mb-4"><h5>Member 6</h5><p class="text-muted">Tourism</p></div>
+                    <div class="col-lg-2 col-md-4 mb-4"><h5>Sayak Bhattacharya</h5><p class="text-muted">Home & UI</p></div>
+                    <div class="col-lg-2 col-md-4 mb-4"><h5>Ritam Manna</h5><p class="text-muted">Maps</p></div>
+                    <div class="col-lg-2 col-md-4 mb-4"><h5>Sneha Kumar</h5><p class="text-muted">Virtual Tour</p></div>
+                    <div class="col-lg-2 col-md-4 mb-4"><h5>Subhajit Maity</h5><p class="text-muted">Archive</p></div>
+                    <div class="col-lg-2 col-md-4 mb-4"><h5>Aniket Sardar</h5><p class="text-muted">Calendar</p></div>
+                    <div class="col-lg-2 col-md-4 mb-4"><h5>Sarthak Tung</h5><p class="text-muted">Tourism</p></div>
                 </div>
             </div>
         </section>
@@ -176,8 +176,8 @@
     <footer class="site-footer">
         
         <p>Contact Us</p>
-        <p>Mail: info@runtimerokkies.gamil.com</p>
-        <p>Phone: +91-1234567890</p>
+        <p>Mail: runtimerookies2025@gmail.com</p>
+        <p>Phone: +91-9732576362</p><hr>
         <p>© 2025 Runtime Rookies Team. All Rights Reserved.</p>
 
     </footer>
