--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                     <div class="col-lg-2 col-md-4 mb-4"><h5>Sayak Bhattacharya</h5><p class="text-muted">Home & UI</p></div>
                     <div class="col-lg-2 col-md-4 mb-4"><h5>Ritam Manna</h5><p class="text-muted">Maps</p></div>
                     <div class="col-lg-2 col-md-4 mb-4"><h5>Sneha Kumari</h5><p class="text-muted">Virtual Tour</p></div>
-                    <div class="col-lg-2 col-md-4 mb-4"><h5>Subhajit Maity</h5><p class="text-muted">Archive</p></div>
+                    <div class="col-lg-2 col-md-4 mb-4"><h5>Shubhajit Maity</h5><p class="text-muted">Archive</p></div>
                     <div class="col-lg-2 col-md-4 mb-4"><h5>Aniket Sardar</h5><p class="text-muted">Calendar</p></div>
                     <div class="col-lg-2 col-md-4 mb-4"><h5>Sarthak Tung</h5><p class="text-muted">Tourism</p></div>
                 </div>
